# MaliPure1

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mailsimpleunderstand/sergeyloscutnikov/malipure/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ArmSimd.cpp  EmptySimd.cpp  LosArmSimd.h  LosEmptySimd.h  LosMathematica.h  Losx_86Simd.h  Matrix.cpp  Matrix.h  NeonGo.h  NeonarmSFour.cpp  SimpleMat.cpp  Texture.cpp  Texture.h  losN.neon.s  losNaa64.neon.s  native-lib.cpp  x_86Simd.cpp.cpp
app/src/main/java/com/mailsimpleunderstand/sergeyloscutnikov/malipure/: MaliMain.java  NativeLibrary.java  TutorialView.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/mailsimpleunderstand/sergeyloscutnikov/malipure/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
